chore: add Avalonia Skia SVG renderer package

--- a/AHON-TRACK.csproj
+++ b/AHON-TRACK.csproj
@@ -25,6 +25,7 @@
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
     <PackageReference Include="ShadUI" Version="0.0.6" />
+    <PackageReference Include="Svg.Controls.Skia.Avalonia" Version="11.3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
