--- a/AHON_TRACK.csproj
+++ b/AHON_TRACK.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-rc5.4" />
     <PackageReference Include="ShadUI" Version="0.0.6" />
     <PackageReference Include="Svg.Controls.Skia.Avalonia" Version="11.3.0.1" />
+	<PackageReference Include="HotAvalonia" Version="3.0.0" PrivateAssets="All" Publish="True" />
   </ItemGroup>
 
   <ItemGroup>
