--- a/AHON_TRACK.csproj
+++ b/AHON_TRACK.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Folder Include="Assets\DashboardView\" />
     <AvaloniaResource Include="Assets\**" />
+    <Folder Include="Assets\ManageEmployeesView\" />
   </ItemGroup>
 
   <ItemGroup>
