--- a/AHON_TRACK.csproj
+++ b/AHON_TRACK.csproj
@@ -37,12 +37,15 @@
     <PackageReference Include="ShadUI" Version="0.1.4" />
     <PackageReference Include="Svg.Controls.Skia.Avalonia" Version="11.3.0.1" />
 	<PackageReference Include="HotAvalonia" Version="3.0.0" PrivateAssets="All" Publish="True" />
-	<PackageReference Include="Jab" Version="0.11.0" PrivateAssets="All"/>
-	<PackageReference Include="Serilog" Version="4.3.0"/>
-	<PackageReference Include="Serilog.Sinks.File" Version="7.0.0"/>
+	<PackageReference Include="Jab" Version="0.11.0" PrivateAssets="All" />
+	<PackageReference Include="Serilog" Version="4.3.0" />
+	<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Components\EmployeeDetails\EmployeeProfileInformationView.axaml.cs">
+      <DependentUpon>EmployeeProfileInformationView.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\LoginView.axaml.cs">
       <DependentUpon>LoginView.axaml</DependentUpon>
     </Compile>
