--- a/AHON_TRACK.csproj
+++ b/AHON_TRACK.csproj
@@ -30,4 +30,8 @@
 		<PackageReference Include="Serilog" Version="4.3.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Assets\Fonts\" />
+	</ItemGroup>
 </Project>
