--- a/AHON_TRACK.csproj
+++ b/AHON_TRACK.csproj
@@ -25,7 +25,7 @@
 		<PackageReference Include="ShadUI" Version="0.1.4" />
 		<PackageReference Include="LiveChartsCore.SkiaSharpView.Avalonia" Version="2.0.0-rc5.4" />
 		<PackageReference Include="Svg.Controls.Skia.Avalonia" Version="11.3.0.1" />
-		<PackageReference Include="HotAvalonia" Version="3.0.0" PrivateAssets="All" Publish="True" />
+		<PackageReference Include="HotAvalonia" Version="3.0.0" PrivateAssets="All"/>
 		<PackageReference Include="Jab" Version="0.11.0" PrivateAssets="All" />
 		<PackageReference Include="Serilog" Version="4.3.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
