--- a/AHON_TRACK.csproj
+++ b/AHON_TRACK.csproj
@@ -29,6 +29,7 @@
 		<PackageReference Include="Jab" Version="0.11.0" PrivateAssets="All" />
 		<PackageReference Include="Serilog" Version="4.3.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+        <PackageReference Include="Egolds.Xaml.Behaviors.Interactions.Animated" Version="11.3.3" />
 	</ItemGroup>
 
 	<ItemGroup>
