--- a/AHON_TRACK.csproj
+++ b/AHON_TRACK.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="Avalonia.Desktop" Version="11.3.3" />
 		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.1" />
 		<PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.1" />
+		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 
 		<!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
