--- a/AHON_TRACK.csproj
+++ b/AHON_TRACK.csproj
@@ -30,6 +30,7 @@
 		<PackageReference Include="Serilog" Version="4.3.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
         <PackageReference Include="Egolds.Xaml.Behaviors.Interactions.Animated" Version="11.3.3" />
+        <PackageReference Include="QuestPDF" Version="2025.7.3" />
 	</ItemGroup>
 
 	<ItemGroup>
